WL# 2094, Federated Storage Handler. This patch fixes bug #8599, HPUX compile errors. Testing on hp3750 shows these fixes fix the compile problems on HPUX, but I have a problem where when I run the tests, the test shows that the tables default to MyISAM!